2015-09-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.5 released.

2015-09-20  Carl Hetherington  <cth@carlh.net>

	* Fix setting of frame rate when loading
	image folders.

2015-09-18  Carl Hetherington  <cth@carlh.net>

	* Add another upmixer which is a simpler
	matrix-type thing with no filtering
	(apart from Lfe).

2015-09-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.4 released.

2015-09-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.3 released.

2015-09-16  Carl Hetherington  <cth@carlh.net>

	* Fix exception on adding an empty folder
	as content (#691).

	* Add config option for default standard
	(SMPTE / Interop).

2015-09-16  c.hetherington  <cth@carlh.net>

	* Allow imported DCPs to be referenced rather
	than re-wrapped (i.e. creation of VF DCPs).

2015-09-15  Carl Hetherington  <cth@carlh.net>

	* Fix crash on re-making certificate chains
	after removing all existing certificates (#690).

2015-09-15  c.hetherington  <cth@carlh.net>

	* Fix failure to display audio analysis
	in some cases.

2015-09-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.2 released.

2015-09-14  Carl Hetherington  <cth@carlh.net>

	* Fix Windows short-cut to encode server.

	* Version 2.3.1 released.

2015-09-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.2.1 released.

2015-09-03  c.hetherington  <cth@carlh.net>

	* Quicker, though slightly less safe,
	check for existing picture data; go back
	from the last frame written until we
	find a good one rather than going
	through from the beginning until we find
	a bad one (#519, #504).

	* Add frame counter to progress
	when transcoding (#111).

	* Add button to export certificates
	from the configuration (#668).

	* Add option to always analyse audio
	and put the peak value into the audio
	tab so it's easy to see (#673).

2015-09-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.2.0 released.

2015-09-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.65 released.
