@@ -46,7 +46,7 @@ deb_depends['12.04'] = {'libc6': '2.15',
                         'libcurl3': '7.22.0-3ubuntu4',
                         'libzip2': '0.10-1ubuntu1',
                         'libsamplerate0': '0.1.8-4',
-                        'libuchardet0': '0.0.1-1'}
+                        'libicu48': '4.8.1.1-3'}
 
 deb_depends['14.04'] = {'libc6': '2.19-0ubuntu6',
                         'libssh-4': '0.6.1-0ubuntu3',
@@ -63,7 +63,7 @@ deb_depends['14.04'] = {'libc6': '2.19-0ubuntu6',
                         'libcurl3': '7.35.0-1ubuntu2',
                         'libzip2': '0.10.1-1.2',
                         'libsamplerate0': '0.1.8-7',
-                        'libuchardet0': '0.0.1-1ubuntu1'}
+                        'libicu52': '52.1-3'}
 
 deb_depends['15.04'] = {'libc6': '2.21-0ubuntu4',
                         'libssh-4': '0.6.3-3ubuntu3',
@@ -81,7 +81,7 @@ deb_depends['15.04'] = {'libc6': '2.21-0ubuntu4',
                         'libzip2': '0.11.2-1.2',
                         'libwxgtk3.0-0': '3.0.2-1',
                         'libsamplerate0': '0.1.8-8',
-                        'libuchardet0': '0.0.1-1ubuntu1'}
+                        'libicu52': '52.1-8'}
 
 deb_depends['7'] = {'libc6': '2.13',
                     'libssh-4': '0.5.4',
@@ -100,7 +100,7 @@ deb_depends['7'] = {'libc6': '2.13',
                     'libcairomm-1.0-1': '1.10.0-1',
                     'libpangomm-1.4-1': '2.28.4-1',
                     'libsamplerate0': '0.1.8-5',
-                    'libuchardet': '0.0.1-1'}
+                    'libicu48': '4.8.1.1-12+deb7u3'}
 
 deb_depends['8'] = {'libc6': '2.19-18',
                     'libssh-4': '0.6.3-4',
@@ -120,7 +120,7 @@ deb_depends['8'] = {'libc6': '2.19-18',
                     'libxcb-xfixes0': '1.10',
                     'libxcb-shape0': '1.10',
                     'libsamplerate0': '0.1.8-8',
-                    'libuchardet': '0.0.1-1'}
+                    'libicu52': '52.1-8+deb8u2'}
 
 deb_depends['unstable'] = {'libc6': '2.13',
                     'libssh-4': '0.5.4',
@@ -137,7 +137,7 @@ deb_depends['unstable'] = {'libc6': '2.13',
                     'libcurl3': '7.26.0',
                     'libzip2': '0.10.1',
                     'libsamplerate0': '0.1.8-8',
-                    'libuchardet': '0.0.1-1'}
+                    'libicu52': '52.1-9'}
 
 def packages(name, packages, f):
     s = '%s: ' % name
