@@ -1,3 +1,8 @@
+2015-09-25  Carl Hetherington  <cth@carlh.net>
+
+	* Detect and convert from non-UTF-8
+	subtitle encodings.
+
 2015-09-21  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.3.5 released.
